--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "new_web",
+  "name": "calbers1.github.io",
+  "homepage": "https://calbers1.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
